setup and links added

--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ hr {
 .btn-primary:hover {
    background-color: #ee4b08;
    border-color: #ee4b08;
-   border-width: 4px;
+   padding: 1rem 2.5rem;
 }
 
 .btn-xl {
